# cpp-breeze

./: .env  .env.example  .gitignore  CMakeLists.txt  README.md  main.cpp
app/Http/Controllers/: HomeController.hpp  UserController.hpp
app/Http/Middleware/: RequestLogger.hpp
app/Providers/: ControllerServiceProvider.hpp  MiddlewareServiceProvider.hpp  ViewServiceProvider.hpp
cmake/: breeze-config.cmake.in
config/: app.json  database.json
examples/: basic.cpp
include/breeze/: breeze.hpp
include/breeze/commands/: serve_command.hpp
include/breeze/core/: application.h  application.hpp  command.hpp  config.hpp  container.hpp  kernel.hpp
include/breeze/database/: migrations.hpp  model.hpp  query.hpp
include/breeze/http/: controller.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  server.hpp  status_code.hpp
include/breeze/support/: blade.hpp  collections.hpp  env.hpp  helpers.hpp  str.hpp  view.hpp  view_engine.hpp
resources/views/: index.html  inline_breeze_example.breeze  inline_cpp_example.breeze
routes/: admin.cpp  api.cpp  web.cpp
src/commands/: cli.cpp
src/core/: application.cpp  kernel.cpp
src/database/: query.cpp
src/http/: response.cpp  router.cpp
src/support/: blade.cpp  str.cpp  view.cpp
tests/: CMakeLists.txt  tests.cpp
